# labfile

./: Justfile  README.md  pyproject.toml  tox.ini
labfile/: __init__.py  labfile.lark
labfile/model/: labfile.py  project.py
labfile/parse/: parser.py  transform.py
tests/parser/: Labfile.test  test_parser.py
